--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📚️</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create amazing & dynamic stories | Blessed Quest</title>
     <meta name="description" content="Free & Open Source tool for creating dynamic stories in the same style as popular Choose Your Own Adventure books.">
